# yugioh-deck-drafter

./: .gitignore  .pylintrc  LICENSE  README.md  pylintrc.cfg  pyproject.toml
tests/: conftest.py  test_main.py
yugioh_deck_drafter/: __main__.py  pyinstaller.py  util.py
yugioh_deck_drafter/modules/: base_widgets.py  deck_drafter.py  ygo_data.py
yugioh_deck_drafter/style/: stylesheet.qss
yugioh_deck_drafter/styles/: style.qss
