[tool.poetry]
name = "yugioh-deck-drafter"
version = "1.1.0"
description = "Python app for drafting custom apps with the Ygoprodeck API."
authors = ["DK <davidkasakaitis@proton.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
build = "yugioh_deck_drafter.pyinstaller:install"
project = "yugioh_deck_drafter.__main__:main"

[tool.poetry.dependencies]
python = "3.12"
requests-cache = "^1.1.0"
pyperclip = "^1.8.2"
inflect = "^7.0.0"
pyqt6 = "6.6.0"
pyqt6-qt6 = "6.6.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.7.0"
flake8 = "^6.1.0"
pytest = "^7.4.3"
pytest-qt = "^4.2.0"
ipykernel = "^6.26.0"
pyinstaller = "^6.2.0"
bandit = "^1.7.5"
pylint = "^3.0.2"
coverage = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint]
disable = ["E0611"]
