[tool.poetry]
name = "yugioh-deck-drafter"
version = "1.1.0"
description = "Python app for drafting custom decks with the Ygoprodeck API."
authors = ["DK <davidkasakaitis@proton.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
build = "yugioh_deck_drafter.pyinstaller:install"
project = "yugioh_deck_drafter.__main__:main"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
requests-cache = "^1.1.0"
pyperclip = "^1.8.2"
inflect = "^7.0.0"
pyqt6 = "6.6.0"
pyqt6-qt6 = "6.6.0"
requests = "^2.31.0"
httpx = "^0.27.0"
sqlalchemy = "^2.0.31"

[tool.poetry.group.dev.dependencies]
mypy = "^1.7.0"
pytest = "^7.4.3"
pytest-qt = "^4.2.0"
coverage = "^7.3.2"
pyinstaller = "^6.8.0"


[tool.poetry.group.types.dependencies]
icespringpysidestubs-pyqt6 = "^1.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
